src/app.scss
@use "page.scss";
@use "ct-card.scss";
@use "@patternfly/patternfly/utilities/Text/text.css";

@import "@patternfly/patternfly/components/Button/button.css";

// Use the page as the toplevel container
.pf-v5-c-page {
    container-type: size;
}

// Passthrough for layout and styling purposes, to enable main page parts to participate in the grid
.pf-v5-c-page__main-section,
.files-view-stack {
    display: contents;
}

// Content area should stretch, so context menu works even when the content doesn't fill the area
.files-view-stack .pf-v5-c-card,
.fileview-wrapper {
    block-size: 100%;
    overflow: auto;
}

.pf-v5-c-page__main {
    gap: var(--pf-v5-global--spacer--md);
    display: grid;
    grid-template:
        "topbar topbar topbar" auto
        ". content ." 1fr
        ". cwd-info ." auto
        ". . ." 0
        / 0 1fr 0;
    inline-size: 100vw;
    block-size: 100vh;
}

.files-view-stack > .pf-v5-c-card {
    grid-area: content;
}

.files-view-stack > .cwd-info {
    margin-block-start: 0;
    grid-area: cwd-info;
}

// TODO probably remove
/* @container (width < 768px) { */
/*     // Change the general layout in smaller screen sizes */
/*     .pf-v5-c-page__main { */
/*         grid-template: */
/*             "topbar" auto */
/*             "." var(--pf-v5-global--spacer--md) */
/*             "content" 1fr */
/*             "sidebar" 8rem */
/*             / 1fr; */
/*         row-gap: 0; */
/*     } */
/* } */

/* Style the list cards as ct-cards */
.pf-c-page__main-section > .pf-c-card {
    @extend .ct-card;
}

.files-overview-header {
  grid-area: topbar;
  gap: var(--pf-v5-global--spacer--sm);
  display: flex;
  /* Align page breadcrumb centered */
  align-items: center;

    /* Override different background color from the <PageBreadCrumb> */
  .pf-v5-c-page__main-breadcrumb {
      background-color: unset
  }

  /* Drop PF padding */
  .pf-v5-c-page__main-breadcrumb {
      padding: 0;
      display: inline-block;
  }

  .pf-v5-c-breadcrumb {
      margin-block: 0;
      margin-inline: var(--pf-v5-global--spacer--sm);
  }
}

.pf-v5-c-breadcrumb {
    margin-block: 0;
    margin-inline: var(--pf-v5-global--spacer--md);
}

.pf-v5-c-breadcrumb__list {
    // Make sure all breadcrumb text is aligned properly, even if different heights (including icon)
    align-items: baseline;

    // Style the breadcrumb component as a path
    .pf-v5-c-breadcrumb__item-divider {
        > svg { 
            display: none;
        }

        &::after { 
            content: "/"; 
        }
    }

    .pf-v5-c-breadcrumb__item {
        // Use the default font size, not the smaller size
        font-size: var(--pf-v5-global--FontSize--md);
    }

    // Size, align, and space icon correctly
    .breadcrumb-hdd-icon {
        // Set the size to a large icon
        block-size: var(--pf-v5-global--icon--FontSize--lg);
        // Width should resolve itself based on height and aspect ratio
        inline-size: auto;
        // Align to the middle (as one would expect)
        vertical-align: middle;
        // Fix the offset problem so it's properly aligned to middle
        margin-block-start: calc(1ex - 1cap);
    }
}

.breadcrumb {
    &-button {
        &-edit-apply,
        &-edit-cancel {
            padding-inline: var(--pf-v5-global--spacer--sm);
        }

        &-edit-apply {
            svg {
                color: var(--pf-v5-c-button--m-link--Color);
            }

            &:focus svg {
                color: var(--pf-v5-c-button--m-link--focus--Color);
            }

            &:hover svg {
                color: var(--pf-v5-c-button--m-link--hover--Color);
            }

            &:active svg {
                color: var(--pf-v5-c-button--m-link--active--Color);
            }
        }
    }
}

// HACK: https://github.com/patternfly/patternfly/issues/6933
.pf-v5-c-menu-toggle.pf-m-secondary {
  background-color: var(--pf-v5-c-button--m-secondary--BackgroundColor);
}

.view-toggle-group {
    .pf-c-menu-toggle__button {
        display: flex;
        align-items: flex-start;
    }
}

.check-icon {
    color: var(--pf-global--primary-color--100);
}

.pf-v5-l-gallery {
    --pf-v5-l-gallery--GridTemplateColumns--max: 10rem;
    align-items: start;
    gap: var(--pf-v5-global--spacer--sm);
    grid-template-columns: repeat(auto-fill, minmax(var(--pf-v5-l-gallery--GridTemplateColumns--max), 1fr));
}

// Wrap titles of modals (instead of truncating long filenames)
.pf-v5-c-modal-box__title, .pf-v5-c-modal-box__title-text {
    white-space: break-spaces;
}

// Menu toggles should also not have extra space between the content and dropmarker
.pf-v5-c-menu-toggle > .pf-v5-c-menu-toggle__controls {
    padding-inline-start: 0;
}

.tooltip-hidden {
    visibility: hidden;
    pointer-events: none;
}

// First Menu SelectGroup item in the sort menu should have no top padding
.pf-v5-c-menu__list section:first-of-type {
    .pf-v5-c-menu__group-title {
        padding-block-start: 0;
    }
}

// // FIXME: Promote the CSS below to overrides, open PF issues // //

// PatternFly always adds a margin after images inside of widgets with pf-m-end, which is incorrect when it's the last element
.pf-v5-c-button__icon.pf-m-start:last-child {
    margin-inline-end: 0;
}

// PF menu toggles are no longer spaced consistently
.pf-v5-c-menu-toggle {
    padding-inline: var(--pf-v5-global--spacer--md) calc(var(--pf-v5-global--spacer--md) * 0.75);
}

// Toolbar actions styling
.header-toolbar {
    display: flex;
    flex-flow: row wrap;
    gap: var(--pf-v5-global--spacer--md);
    justify-content: space-between;
    font-family: var(--pf-v5-global--FontFamily--text);

    .files-search {
        flex: fit-content;
    }

    .header-actions {
        display: flex;
        gap: var(--pf-v5-global--spacer--md);
    }

    #dropdown-menu.pf-v5-c-menu-toggle {
        padding-inline-start: var(--pf-v5-global--spacer--sm);
    }
}

.shortcuts-dialog {
    h2 + .pf-v5-c-description-list {
        margin-block-start: var(--pf-v5-global--spacer--md);
    }

    .pf-v5-l-flex {
        // Add standard spacing between the description lists that are in a flex
        // (PF Flex does odd stuff by default)
        gap: var(--pf-v5-global--spacer--lg) var(--pf-v5-global--spacer--md);

        > .pf-v5-c-content {
            // Have the content prefer 20em and wrap if too narrow
            flex: 1 1 20em;
        }
    }

    .pf-v5-c-description-list {
        // PF's gap is weirdly too big; let's use the PF standard size that's used everywhere else
        --pf-v5-c-content--dl--ColumnGap: var(--pf-v5-global--spacer--md);
        // We're setting this up as a table on the list, so they're consistent
        display: grid;
        // Fixing the width to the keyboard shortcuts
        grid-template-columns: auto 1fr;
        // Fix PF's negative margin at the end bug (as it's handled by grid layout anyway)
        margin-block-end: 0;

        .pf-v5-c-description-list__group {
            // Ignore the grid of the group and use the grid from the description list, so everything lines up properly
            display: contents;
        }
    }

    kbd {
        // Description lists bold the dt; we don't want the keys too look too bold
        font-weight: normal;
    }

    // Style key combos
    .keystroke {
        display: flex;
        align-items: center;
        color: var(--pf-v5-global--Color--200);
        font-size: var(--pf-v5-global--FontSize--xs);
        gap: var(--pf-v5-global--spacer--xs);
    }

    // Style individual keys
    .key {
        display: inline-block;
        background-color: var(--pf-v5-global--BackgroundColor--200);
        border-radius: var(--pf-v5-global--BorderRadius--sm);
        border: 1px solid var(--pf-v5-global--BorderColor--100);
        color: var(--pf-v5-global--Color--100);
        padding-block: var(--pf-v5-global--spacer--xs);
        padding-inline: var(--pf-v5-global--spacer--sm);
        box-shadow: inset 1px 1px 0 var(--pf-v5-global--BackgroundColor--100);
        white-space: nowrap;
    }
}

// Cwd info styling
.cwd-info {
    display: flex;
    flex-flow: row wrap;
    column-gap: var(--pf-v5-global--spacer--md);
    margin-block-start: var(--pf-v5-global--spacer--sm);
    margin-inline-start: var(--pf-v5-global--spacer--md);

    .cwd-mtime {
        color: var(--pf-v5-global--Color--200);
    }

    .cwd-permissions {
        color: var(--pf-v5-global--link--Color);
    }
}

